# RP2040_RotaryEncoder_Reader

./: CMakeLists.txt  README.md  example.c  rot.c  rot.h
